# app/Http/Controllers/SolicitudReservaController.php
@@ -11,6 +11,64 @@ use Exception;
 
 class SolicitudReservaController extends Controller
 {
+    /**
+     * @OA\Post(
+     *      path= "/solicitud-reserva/",
+     *      summary =  "Obtencion de todas las solicitudes pendientes",
+     *      tags = {"Solicitud de reservas"},
+     * 
+     *       @OA\RequestBody(
+     *         @OA\JsonContent(
+     *              @OA\Property(
+     *                  property="numero_estimado", 
+     *                  type="int"
+     *               ),
+     *               @OA\Property(
+     *                  property="fecha", 
+     *                  type="date"
+     *               ),
+     *               @OA\Property(
+     *                  property="aulasId", 
+     *                  type="array",
+     *                  @OA\Items(
+     *                      type="string"
+     *                  ),
+     *               ),
+     *               @OA\Property(
+     *                  property="gruposId", 
+     *                  type="array",
+     *                  @OA\Items(
+     *                      type="string"
+     *                  ),
+     *               ),
+     *               @OA\Property(
+     *                  property="justificacionesLista", 
+     *                  type="array",
+     *                  @OA\Items(
+     *                      type="string"
+     *                  ),
+     *               ),
+     *               @OA\Property(
+     *                  property="periodosId", 
+     *                  type="array",
+     *                  @OA\Items(
+     *                      type="string"
+     *                  ),
+     *               ),
+     *         ),
+     *        
+     *    ),
+     *      @OA\Response(
+     *          response=200,
+     *          description = "OK"),
+     *      @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *      ) 
+     * )
+     * 
+     */
+
     public function crearSolitud(Request $request)
     {
         $datos_reserva = DatosReservaController::crearDatosReserva($request);
@@ -24,18 +82,66 @@ class SolicitudReservaController extends Controller
 
         return $solicitud_reserva;
     }
-
+    /**
+     * @OA\Get(
+     *      path= "/solicitud-reserva/{idSolicitud}",
+     *      summary =  "Obtencion de todas las solicitudes pendientes",
+     *      tags = {"Solicitud de reservas"},
+     * 
+     *      @OA\Parameter(
+     *          name="idSolicitud",
+     *          description="Id de la Solicitud de Reserva",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),     
+     *      @OA\Response(
+     *          response=200,
+     *          description = "OK"),
+     *      @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *      ) 
+     * )
+     * 
+     */
     public function getSolicitudPorId(Request $request){
         $solicitud =  SolicitudReserva::findOrFail($request->idSolicitud);
         return response()->json($solicitud, 200,[]);
     }
-
+    
     public function getEstado(Request $request){
         $solicitud = SolicitudReserva::findOrFail($request-> idSolicitud);
         $estadoSolicitud = ["estado"=>$solicitud->estado]; ;
         return response()->json($estadoSolicitud,200,[]);
     }
-
+    /**
+     * @OA\Put(
+     *      path= "/solicitud-reserva/cambio-estado/{idSolicitud}",
+     *      summary =  "Obtencion de todas las solicitudes pendientes filtradas por antiguedad",
+     *      tags = {"Solicitud de reservas"},
+     *      @OA\Parameter(
+     *          name="idSolicitud",
+     *          description="Id de la Solicitud de Reserva",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description = "OK"),
+     *      @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *      )
+     * )
+     * 
+     * 
+     */
     public function actualizarEstado(Request $request){
         $solicitud = SolicitudReserva::findOrFail($request-> idSolicitud);
         $solicitud->estado = 'RECHAZADO';
@@ -43,17 +149,63 @@ class SolicitudReservaController extends Controller
         return $solicitud;
     }
 
+    /**
+     * @OA\Get(
+     *      path= "/solicitud-reserva/pendientes",
+     *      summary =  "Obtencion de todas las solicitudes pendientes",
+     *      tags = {"Solicitud de reservas"},
+     *      @OA\Response(
+     *          response=200,
+     *          description = "OK"),
+     *      @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *      ) 
+     * )
+     * 
+     */
     public function getPendientes(){
         return SolicitudReserva::where("estado", "PENDIENTE")
                                ->get();
     }
-
+    /**
+     * @OA\Get(
+     *      path= "/solicitud-reserva/antiguedad",
+     *      summary =  "Obtencion de todas las solicitudes pendientes filtradas por antiguedad",
+     *      tags = {"Solicitud de reservas"},
+     *      @OA\Response(
+     *          response=200,
+     *          description = "OK"),
+     *      @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *      )
+     * )
+     * 
+     * 
+     */
     public function getPendientesPorAntiguedad(){
         return SolicitudReserva::where("estado", "PENDIENTE")
                                ->orderBy('fecha_creacion','ASC')
                                ->get();
     }
 
+    /**
+     * @OA\Get(
+     *      path= "/solicitud-reserva/proximos",
+     *      summary =  "Obtencion de todas las solicitudes pendientes filtradas por fecha mas proxima",
+     *      tags = {"Solicitud de reservas"},
+     *      @OA\Response(
+     *          response=200,
+     *          description = "OK"),
+     *      @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *      )
+     * )
+     * 
+     * 
+     */
     public function getPendientesPorProximidad(){
         $solicitud=DB::table('datos_reservas')
         ->join('solicitud_reservas', function ($join) {
